fix: z-index about-us

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2737,3 +2737,6 @@ img {
     text-align: right;
   }
 }
+@media (min-width: 716px) {
+  .about__header {z-index:101;}
+}
